A few quick changes for selenium testing

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">5 a-side Football Team Table</a>
+            <a class="navbar-brand" href="#">5 a-side Football</a>
         </div>
     </nav>
     <div class="container-fluid row justify-content-md-center pageContainer">
@@ -83,9 +83,6 @@
                         <button type="reset" class="btn btn-dark">Reset</button>
                         <button type="submit" class="btn btn-dark">Submit</button>
                     </form>
-                </div>
-                <div class="modal-footer">
-
                 </div>
             </div>
         </div>
